--- a/lessons/python_intro/python_review_and_best_practices.ipynb
+++ b/lessons/python_intro/python_review_and_best_practices.ipynb
@@ -700,20 +700,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [],
    "source": [
     "# write your function here\n",
-    "def anagram_checker():\n",
-    "    pass"
+    "def anagram_checker(str1,str2):\n",
+    "    from itertools import permutations\n",
+    "    per_list = [''.join(per) for per in permutations(str2)]          \n",
+    "    if str1 in per_list: \n",
+    "          return True\n",
+    "    return False"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 31,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'You passed all tests!'"
+      ]
+     },
+     "execution_count": 31,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# DON'T CHANGE THIS CELL! IT'S JUST HERE TO TEST YOUR CODE\n",
     "\n",
@@ -1611,7 +1626,7 @@
  "metadata": {
   "anaconda-cloud": {},
   "kernelspec": {
-   "display_name": "Python [default]",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -1625,7 +1640,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.6"
+   "version": "3.7.9"
   },
   "toc": {
    "nav_menu": {},
